--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -19,12 +19,12 @@
     --light-grey: #eee;
     --white-grey: #f5f5f5;
     --white: white;
-    --shadow: rgba(0, 0, 0, 0.4);
 
     --warning-bg: #fff5da;
     --error-bg: #ffd2d6;
 
-    --box-shadow: 0 0.2rem 0.15rem -0.1rem var(--shadow);
+    --box-shadow: 0 0.25rem 0.2rem -0.1rem rgba(0,0,0,0.2),
+        0 0.05rem 0.1rem 0.05rem rgba(0,0,0,0.25);
 }
 
 html {
